tests/rosetta/out/Fortran/assertions.error
gfortran: exit status 1
/tmp/assertions.f90:5:3:

    5 |   main()
      |   1
Error: Unclassifiable statement at (1)
